upgraded level viewer to VS2015
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@504 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2015.csproj
+++ b/levelviewer/Main/Main2015.csproj
@@ -137,7 +137,6 @@
     <Compile Include="Graphics\OpenGl\GlslEffect.cs" />
     <Compile Include="Graphics\OpenGl\GlTexture.cs" />
     <Compile Include="Graphics\OpenGl\GlVertexBuffer.cs" />
-    <Compile Include="Graphics\OpenGl\OpenGLInterop.cs" />
     <Compile Include="Graphics\OpenGl\OpenGLRenderer.cs" />
     <Compile Include="Graphics\RenderWindow.cs" />
     <Compile Include="Graphics\SkyBox.cs" />
@@ -191,6 +190,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Shaders\2d.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
