--- a/levelviewer/Game/Game2015.csproj
+++ b/levelviewer/Game/Game2015.csproj
@@ -126,7 +126,8 @@
     <!-- <Copy SourceFiles="$(ProjectDir)..\..\sheep\$(ConfigurationName)\sheep.dll;$(ProjectDir)..\..\libbarn\$(ConfigurationName)\barn.dll" DestinationFolder="$(OutDir)" /> -->
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy /Y "$(ProjectDir)..\..\sheep\Debug\sheep.dll" "$(ProjectDir)$(OutDir)"
+xcopy /Y "$(ProjectDir)..\..\libbarn\Debug\barn.dll" "$(ProjectDir)$(OutDir)"
+xcopy /Y "$(ProjectDir)..\..\Lib\mpg123\libmpg123-0.dll" "$(ProjectDir)$(OutDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
