using miniz instead of zlib to make building simpler
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@506 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Game/Game2015.csproj
+++ b/levelviewer/Game/Game2015.csproj
@@ -92,7 +92,7 @@
     <Compile Include="VerbPickerManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Main\Main.csproj">
+    <ProjectReference Include="..\Main\Main2015.csproj">
       <Project>{CC878405-3C13-4940-A18C-9C035E91311C}</Project>
       <Name>Main</Name>
     </ProjectReference>
