--- a/levelviewer/Main/packages.config
+++ b/levelviewer/Main/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="OpenTK" version="2.0.0" targetFramework="net20" />
+  <package id="SlimDX" version="4.0.13.44" targetFramework="net20" requireReinstallation="true" />
 </packages>
