--- a/levelviewer/Game/Game2015.csproj
+++ b/levelviewer/Game/Game2015.csproj
@@ -130,6 +130,6 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy /Y "$(ProjectDir)..\..\sheep\$(Configuration)\sheep.dll" "$(ProjectDir)$(OutDir)"
 xcopy /Y "$(ProjectDir)..\..\libbarn\$(Configuration)\barn.dll" "$(ProjectDir)$(OutDir)"
-xcopy /Y "$(ProjectDir)..\..\Lib\mpg123\libmpg123-0.dll" "$(ProjectDir)$(OutDir)"</PostBuildEvent>
+xcopy /Y /C "$(ProjectDir)..\..\Lib\mpg123\libmpg123-0.dll" "$(ProjectDir)$(OutDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
