Fixed some linux errors
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@531 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile-library
+++ b/sheep/makefile-library
@@ -1,11 +1,11 @@
 CC=gcc
 CPPC=g++
 LINKER=g++
-COMPILER_FLAGS= -g -fPIC
-LINKER_FLAGS=-shared -Wl
+COMPILER_FLAGS= -g -fPIC --std=c++11
+LINKER_FLAGS=-shared -Wl,-rpath=.
 EXECUTABLE=libsheep.so
 
-SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp sheepMemoryAllocator.cpp
+SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepCompiler.cpp sheepDisassembler.cpp sheepMemoryAllocator.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 
 $(EXECUTABLE): $(OBJECTS)
